--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,8 +1,35 @@
-<head>
-<meta charset="utf-8">
-<title>Sobre a Mirror Fashion</title>
-<link rel="stylesheet" href="css/sobre.css">
-<head>
+h1 {
+    font-family: serif;
+}
+h2 {
+    font-family: sans-serif;
+}
+p {
+    font-family: monospace;
+}
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+p{
+    text-align: left;
+}
+p{
+    line-height: 16px;
+    letter-spacing: 2px;
+    word-spacing: 5px;
+    text-indent: 30px;
+}
+h1 {
+    background-image: url(sobre-background.jpg);
+}
+body {
+    border-color: red;
+    border-style: solid;
+    border-width: 1px;
+}
+body {
+    border: 1px solid red;
+}
 body {
   color: #333333;
 font-family: "Lucia Sans Unicode", "Lucida Grande", sans-serif
@@ -20,4 +47,38 @@ text-align: center;
 }
 figcaption {
     font-style: italic;
+}
+h1 {
+color: red;
+}
+h2 {
+    background-color: yellow;
+}
+h3 {
+    color: rgb(255, 200, 0);
+}
+h3 {
+    background-color: #F2EDED;
+}
+h1 {
+    padding: 10px;
+}
+h2 {
+    margin-top: 30px;
+}
+p {
+    padding: 0 45px;
+    text-indent: 15px;
+}
+figure {
+    padding: 15px;
+    margin: 30px;
+}
+figcaption {
+    margin-top: 10px;
+}
+body {
+    margin-left: auto;
+    margin-right: auto;
+    width: 940px;
 }
