--- a/css/estilos.css
+++ b/css/estilos.css
@@ -137,4 +137,56 @@ header {
 
 .mais-vendidos {
     background-color: #DCDCF5;
+} 
+.social a[href*="facebook.com"] {
+    background-image: url(../img/facebook.png);
+
+}
+.social a[href*="twitter.com"] {
+    background-image: url(../img/twitter.png);
+}
+.social a[href*="plus.google.com"] {
+    background-image: url(../img/googleplus.png);
+}
+footer { 
+    background-image: url(../img/fundo-rodape.png);
+    
+}
+
+.social a {
+    
+    height: 32px;
+    width: 32px;
+    
+    display: block;
+    text-indent: -9999px;
+}
+footer {
+    clear: both;
+}
+footer {
+    padding: 20px 0;
+}
+footer .container {
+    position: relative;
+}
+.social {
+    position: absolute;
+    top: 12px;
+    right: 0;
+}
+.social li {
+    float: left;
+    margin-left: 25px;
+}
+.busca button {
+
+    background-image: url(../img/busca.png);
+    background-repeat: no-repeat;
+    border: none;
+
+    width: 20px;
+    height: 20px;
+
+    text-indent: -9999px;
 }
