--- a/css/estilos.css
+++ b/css/estilos.css
@@ -190,3 +190,21 @@ footer .container {
 
     text-indent: -9999px;
 }
+.menu-opcoes a:hover {
+    color: #007dc6;
+}
+.menu-opcoes a:active {
+    color: #867dc6;
+}
+.menu-departamentos li ul {
+    display: none;
+}
+.menu-departamentos li:hover ul {
+    display: block;
+}
+.menu-departamentos ul ul li {
+    background-color: #DCDCDC;
+}
+.menu-departamentos li li a::before {
+ content: '- ';
+}
