--- a/css/estilos.css
+++ b/css/estilos.css
@@ -43,6 +43,7 @@ body {
 }
 header {
     position: relative;
+    transform: translateX(50px);
 }
 .busca,
 .menu-departamentos {
@@ -99,10 +100,14 @@ header {
     margin: 10px 0;
     padding: 10px;
     width: 445px;
+    box-shadow: inset 1px 1px 4px #999;
+    border-radius: 4px;
+    box-shadow: 1px 1px 4px #999;
 }
 
 .novidades {
     float: left;
+    background: linear-gradient(#F5DCDC);
 }
 .mais-vendidos {
     float: right;
@@ -122,6 +127,7 @@ header {
     text-transform: uppercase;
 
     margin-bottom: 10px;
+    text-shadow: 3px 3px 2px rgba(255,255,255, 0.8);
 }
 
 .painel a {
@@ -132,11 +138,12 @@ header {
 }
 
 .novidades {
-    background-color: #F5DCDC;
+    background: linear-gradient(#F5DCDC, #bebef4);
 }
 
 .mais-vendidos {
     background-color: #DCDCF5;
+    background: linear-gradient(#DCDCF5, #f4bebe);
 } 
 .social a[href*="facebook.com"] {
     background-image: url(../img/facebook.png);
@@ -150,6 +157,7 @@ header {
 }
 footer { 
     background-image: url(../img/fundo-rodape.png);
+    transform: translate(40px, -20px);
     
 }
 
@@ -244,3 +252,27 @@ borda inferior esquerda com 100px */
 .d {
     border-radius: 5px 20px 50px 100px;
 }
+
+a {
+    opacity: 0.9;
+    color: white;
+    color: #FFFFFF;
+    color: rgb(255, 255, 255);
+    color: (255,255,255, 0.8);
+    background-color: rgba(0,0,0, 0.3);
+    color: white;
+}
+.gradiente {
+    background: #cbebff;
+    background: linear-gradient(45deg, #f0f9ff 0%, #cbebff 47%, #a1dbff 100%);
+}
+
+.busca {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+#main {
+    transform: translateY(-20px);
+}
+
+
